test/Fail/Issue7136b.err
Issue7136b.agda:8.18: error: [ParseError]
Illegal pattern synonym argument  x
(Quantity annotations not allowed in pattern synonym arguments.)
